# FastAPIWidget

./: README.md  main.py  pyproject.toml  requirements.txt  setup.sh
static/: index.html
